# martini

./: .gitignore  CHANGELOG.md  PROGRESS.md  README.md  TODO.md  config.py  gui.py  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
downloads/: fetch_tracks.py
src/: evaluate.py  exceptions.py  ica.py  loader.py  mixer.py  pipeline.py  postprocessor.py  preprocessor.py  visualize.py
tests/: test_evaluate.py  test_ica.py  test_mixer.py
